# psychopy-sphinx-theme

./: pyproject.toml
psychopy_theme/: layout.html  navbar.html  theme.toml
psychopy_theme/static/: navbar.afdesign  psychopy.css
