[project]
name = "psychopy-sphinx-theme"
version = "0.0.1" 
description = "Sphinx theme to make docs look like PsychoPy docs"
readme = "README.md"
authors = [
  { name = "OST Science Team", email = "science@opensceincetools.org" },
]
license = { text = "MIT" }
dependencies = []

[project.urls]
homepage = "https://github.com/psychopy/psychopy-sphinx-theme"
changelog = "https://github.com/psychopy/psychopy-sphinx-theme/blob/main/CHANGELOG.md"

[project.entry-points."sphinx.html_themes"]
psychopy = "psychopy_theme"

[tool.setuptools.package-data]
"*" = ["psychopy_theme/**/*"] 

[tool.setuptools.packages.find]
exclude = ["docs*", "docs_src*", "tests*"]